feat: add background-color

--- a/style.css
+++ b/style.css
@@ -4,4 +4,53 @@
     margin: 0px;
     padding: 0px;
     font-family: Montserrat;
+    color: #000000;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+body {
+    position: relative;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    background-color: #F0F0F0;
+    height: 50%;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: -1;
+}
+
+body::after {
+    content: '';
+    position: absolute;
+    background-color: #CC3931;
+    height: 50%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+}
+
+.wrapper {
+    background-color: white;
+    z-index: 10;
+    max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: -4px 8px 17px 3px rgba(0, 0, 0, 0.2);
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
 }
