fix: fix warning

--- a/style.css
+++ b/style.css
@@ -120,13 +120,17 @@ body::after {
     justify-content: space-between;
 }
 
+.section-about__heading {
+    color: var(--main-color);
+}
+
 .section-about__description {
+    margin-top: 15px;
     max-width: 309px;
     margin-bottom: 35px;
     font-weight: 400;
     font-size: 16px;
     line-height: 143.52%;
-    color: #AD4844;
 }
 
 .section-about__background {
